# ChangeLog for dev-python/peewee
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/peewee/ChangeLog,v 1.12 2014/07/13 15:00:17 idella4 Exp $

*peewee-2.2.5 (13 Jul 2014)

  13 Jul 2014; Ian Delaney <idella4@gentoo.org> +peewee-2.2.5.ebuild:
  bump

  15 Jun 2014; Patrick Lauer <patrick@gentoo.org> peewee-2.2.4.ebuild:
  Fix python deps

*peewee-2.2.4 (02 Jun 2014)

  02 Jun 2014; Ian Delaney <idella4@gentoo.org> +peewee-2.2.4.ebuild,
  -peewee-2.1.4.ebuild, -peewee-2.1.5.ebuild, -peewee-2.1.6.ebuild,
  -peewee-2.1.7.ebuild, -peewee-2.2.1.ebuild:
  bump; fix test phase, assisted with support testing by eroen, remove
  some oldies

*peewee-2.2.1 (02 Jun 2014)

  02 Jun 2014; Ian Delaney <idella4@gentoo.org> +peewee-2.2.1.ebuild:
  bump; add py3 support, dep for tests, IUSE doc, doc build,

*peewee-2.2.0 (26 May 2014)

  26 May 2014; Patrick Lauer <patrick@gentoo.org> +peewee-2.2.0.ebuild:
  Bump

*peewee-2.1.7 (20 May 2014)

  20 May 2014; Patrick Lauer <patrick@gentoo.org> +peewee-2.1.7.ebuild:
  Bump

*peewee-2.1.6 (14 May 2014)

  14 May 2014; Ian Delaney <idella4@gentoo.org> +peewee-2.1.6.ebuild:
  bumpity bump, add IUSE examples, cleanup

*peewee-2.1.5 (09 May 2014)

  09 May 2014; Patrick Lauer <patrick@gentoo.org> +peewee-2.1.5.ebuild:
  Bump

  17 Aug 2013; Patrick Lauer <patrick@gentoo.org> peewee-2.1.4.ebuild:
  More cleanups

  17 Aug 2013; Patrick Lauer <patrick@gentoo.org> peewee-2.1.4.ebuild:
  Cleanups

*peewee-2.1.4 (17 Aug 2013)

  17 Aug 2013; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +peewee-2.1.4.ebuild:
  Initial import, ebuild by me