@@ -4,15 +4,17 @@ Hash: SHA256
 DIST 2.2.0.tar.gz 251829 SHA256 b8453879b475837ca32d0d43d4b36bb0b6f217d6546ef3890a2bc0d03e19c2ca SHA512 bec38cb529a90cce8ed3ad458efaabc9dc614694492f03b722ffda24e73e3a0786d06c51c79535de42a3e8bd52a194c520755579e6488dcd6499cd7cabef9ce2 WHIRLPOOL fbd61c7e8bf15dc1d44947c885a4b5729eb6b4e07d325b83a6d08cf4c43850eb60dc497777a37dcee99ab1068f859d974cec865fc49e3385b786fdbf8ba469cc
 DIST 2.2.4.tar.gz 283710 SHA256 6c4f915fc5b76a5ac5aade7f134eb00a56c80e236738930e724e731af8475194 SHA512 980df76d1faf3ab982f905c1a6934eb19a98b460ed58327df141bf2ff84cf155e809b735ce446d0feb7462fcf03a835dce56e2a549f60d9954b010d5c0cebd18 WHIRLPOOL 190a14b05ed242488024eb413bd2d9d66baddc1c65ec1852a541693e0290f7d6b4e1bfb789ff027a443a924b57d1a56dea1b846a7d523a5338082d97ed6a941b
 DIST 2.2.5.tar.gz 290931 SHA256 c58245d96ed12aea03b90778078014a733f6a0b078e260c30ab32b339c28f888 SHA512 91938071acff3ace02dec2a421727937c6799d914a254ff2fc95bca068544169c79a02914fd0ab8c8e36f530c72c59a8123b971d280187bc9692cdcb52b9e3f9 WHIRLPOOL cebf8a0506099b2da0a48f8df7f8c82f5004f3861757c16a6a7d70a2844d592cf6338e5a67d36333fbc3398ebef415ea6728128f8ef63ecc0ddf37dbf4c8d884
+DIST peewee-2.3.0.tar.gz 297166 SHA256 b5baefc06d0a5693434acff33289acd8844ea1468ce5655906ede0e57e03cdd0 SHA512 c26e06dd63019a841746e14ddc539ae251d2ef87b0a97317cad5b96484d3a30c4b650a37614a5887b84ae5383d0b24690817ea1475772c92040fe6d1a3a61368 WHIRLPOOL d56cca2afa56a03ae658b5f5c667301ff5e3d30ae1d77c2a9a0c8723e6edb3b9a15f93f03254a0af3309ea69a736475e98fce5b0de03d37026ff56bff3a303f6
 EBUILD peewee-2.2.0.ebuild 822 SHA256 30032196b4a68175d533370206716eae66b1b49efe7a1ea71975cac607a3f691 SHA512 f8f44cd3e6bb92d8d3e259fa04c79f815a24361324233f93f5f07b6936837dac78ce3f344045aadebbae0dc1ddbe699c455aca8d6fe50b6432ac2324fb58272b WHIRLPOOL aeecc367d78feb495ae751244eb2d580f1e26fff4af99bf356afabf3af10f3cec2896c917c47c39053f1638afb69b3a31fcdf71efbe25960d72b3dcb13cfda2f
 EBUILD peewee-2.2.4.ebuild 1132 SHA256 8f89fdb3a1e88574c4b47d2a0a8589cfabbe65eee6acc0f0cc8f8b24e3416cea SHA512 3a96083ae035636e9863e3dfc24845c008a86a955db51b2b01c3a78d7d0b23dde5f91c8560cd81be119a57d50692e166c08106386c27c345c4747a904e3c79fc WHIRLPOOL 46ffc365260e27ef26c960a66f049cd67a087174f20457711a1d97b9fec0a08ef9c9dc03a78102e2839714356f17440da15a0fb058443d12176d4549f2fd465b
 EBUILD peewee-2.2.5.ebuild 1132 SHA256 9c9622c370659c4b2f3bb0ff43a025df95b86382b7d89e0658ff31220d6118cc SHA512 f2530b45b3315c0b52c9443c6cae3ea4d596f1296f637841b3bb0111f3f9c32e516b54208b56a590a5a8ed3bd313f7f03713c2b437a2ac856984b5e845a49ec5 WHIRLPOOL efa9a48fd5d54f30e429f9a0f72d9fecedd162ca44260152bf66926157ead310f19f987e4bded9b68232c9682c5fe9dc71c7b33a628de6adcbaee91c54e1a8a7
-MISC ChangeLog 1656 SHA256 c0181f33eee8d9bd2a195305422b578cf55c951de0c70d5f9c13e0616b0a7114 SHA512 cfc1b5c761dfafc9e8f981a7c6253923deb23df48803bba6ee92ecc34287d0cc0b2a80bba300925952287131df8ba3f1d453915b66967cdd98bb142ef2e7eeef WHIRLPOOL c939c253f3bbc35b90f4ae7375f345e1653eb1afd3780df0cad2da43b94de13fb6443c0852a7a2a080e9b6d68b1dbae8437db9b7b0094831376b496efe02ba5a
+EBUILD peewee-2.3.0.ebuild 1148 SHA256 9a71a779bab1133f8bea310a3f27ea39b3cab9306f352fe886864b066ead7052 SHA512 789fc7749621bd6a836f19af5c2e10054dc36a614a698d90183db37f54a7c6a7c0694015c93872cc4c8a921f1f7ed0d451228282761104c30af27dbb2f6a0c3a WHIRLPOOL dc968ac3deb1d7d482300d2d271889a719108393cbdb49a1ed9c5bd124e759325e1b2fdf414133d15cd5557cc3ec35b42ea3ab8326600efa640b3bba4837ffdd
+MISC ChangeLog 1763 SHA256 116fa2025965abcf9c6b277b8ba57e59e9446e4dad2c2c3db3a48cd6e7c60fc7 SHA512 60a929e09fdbe3b53e76e6db6e13fc35b970c6a6396517a3d9972acbfc3da9c936ed2d053f91d82469613bdc9326835a5dc53967354c88df93c6c1ef8591c3a8 WHIRLPOOL 0ea28963014976b85395c7e91b85392f89f01a72c6dd137fb81c1f88f2d914ded5b129fd6e5b7c22ac73f59cf83ca071897ebcb1d64b31a8b7d1d7d9f4bea3c3
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlPCnQgACgkQso7CE7gHKw0BKgCg0m60iN50IklJNaCU32ui9MYK
-OJAAoKXzXGPhJd3rWcui0GijQX+Wd+Gm
-=gIpT
+iEYEAREIAAYFAlP0PA0ACgkQso7CE7gHKw0LkgCgnoziXONyZWjsci9ujK0lgG8u
+rEwAoKPxD1LkNRQE0Q5w7r0wSLC6zX2t
+=ToB4
 -----END PGP SIGNATURE-----
