@@ -1,10 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX rspec-core-2.4.0-tests.patch 1723 SHA256 05accc191c798941e4918701b22ed5defce97460f32da96141ecb67486aee99f SHA512 7974409e1c82d7b94082a0b5cc51cac392c2b465da414efd11b38ab5c85e845d8cb655ca993e4f6f3aae941bdc2ff5ba483742d0c84fe99e72f8a5440cdbd6ee WHIRLPOOL 08d43ae4d917d3166341c6f68909b65a7181c870b13c24a129971a46c91487a9bdc162a5698771ff0e545a24177fa9566e1a0d2110650be79430291d84bdc366
 DIST rspec-core-2.12.2-git.tgz 169377 SHA256 ce19262c407725ad5ea894710536e576344575ed074f4be3905f8663cd03713b SHA512 fddb456e010a8713a9e04eba4f7133498fc01ea99fd3ba66dde485f6f2e2fa56c056d8a1d0b7aee80cccc8e45a4e90f3ce2ee9f554ad9330071917293b607756 WHIRLPOOL 8cf1e8536ed8449b2f8b5c607a88688405b25489adf7a3ea9773e8b61f08b8ec20cf32f85821aadb102ff371ec4cde35f643a97fdbaff77c22ad2fe3d718686e
 DIST rspec-core-2.14.8-git.tgz 195949 SHA256 757febdcc4465b62fb41572e1fb7e0deb86f903127cb2941ea65d2c1d4ac29db SHA512 2be487f0a820cb959771b0c2a725aa7a43cd80a76f85ed42f3341420cefa4ba6413b5dbd86e8fba9f5515afef3e895e0f1f2f8239d50f0b764f037d5f0791095 WHIRLPOOL 5b2422d7f1d087caf654ea04d81f269ae90be63eb73135d34691839c27e6dfa152aac425f64a860b3af50ef0bf513ac7f4a68c979c254083f187e57a96c20fe3
 DIST rspec-core-2.99.1-git.tgz 212855 SHA256 998725627c1047010e43bc99863859fcc37c71b832264fa8aa1cfb45f18149c2 SHA512 218dfb42ddb425f49b3f46f892bed0ddf4d873b3e4919348d1f6f0a9fa93e1440ac9505e8b943f43c1a7d83430471ba7a0c5534dca5e22971b510cf4ab5f8292 WHIRLPOOL a23641c73536ad8ea1084d0a41cb3046cdf0df339f2a31ca9140891e074c51b6371e41560e132dd5ba409e325d9810ba09692ed4c7c08724ca1858b52e314881
+DIST rspec-core-2.99.2-git.tgz 212935 SHA256 75794e3f94f3323b1212b93e827d37d6ab2813dea2f5f927929b40e9ee170c43 SHA512 e13bc3384fd85c367481a8651c14be4a412cba5f58e12a8f4ab14b5d2768a7b92191b81e000e7dbf6a28275b41044d8b3eb70a04e4b30b5bf88db98cbec4cc44 WHIRLPOOL 5584be2da2310688155c4fe600a4a36f68434440ebc00b063e9fcdcb3188138831a210f482ac86a469984fcf9838d795511ea02433020ecc6bc1d6aacc8c72bd
 EBUILD rspec-core-2.12.2.ebuild 2621 SHA256 b0fb0995e2645e245c42ed18332bfe730f432c40bd3648417b09ceb9dc1a3999 SHA512 19ce61e327c8b19909eff4908b10f17d36786aae10f346352165cbd8b549f6243ee67eef61e9a6625a75aa9d970904b0b2a29e137e4d95edfa94a560ef43461e WHIRLPOOL cfff23dd33c6242a1ed88a05a86c98e0656f2616072aa05af7136d60d79a8c2598df376ce48dc00eac2d4db6a2b6fb7c7d026ebbbb4de419edfb9dc58c9d1fd1
 EBUILD rspec-core-2.14.8-r1.ebuild 2876 SHA256 dbdb1f3268ce4cf524c2c60199ad99260d1fca9d59125220c5f6b4b73b96aa96 SHA512 1dff6921216ffb29fd544621e11cbf81b6f2a2c4e3e81cbbf5d197b39229a3e66e55ba78de192cd89f42f9306b37ef571a20c6ddc775a97f4763b2cdb468d70c WHIRLPOOL 1929c4e10198ade5833da7b30813ca0d9b9490d17367b6d07a90d6788596ec18c600a95400ded233761c57539372650913466fa5c8962ef4ea78733611f8fdf1
 EBUILD rspec-core-2.14.8.ebuild 2554 SHA256 3cf0049afe26fb8452d0c66d2a2df059cf3815eedcb6513d77bce791ce84ea24 SHA512 5d586ac30bfec2131e872f5342ce76a9afd13cd50c09d7049f7267764ed7c356c62a2ecc8f638b7ccd7d3a385458cc18eb19f04163ec98d2ffbec87f036e4af7 WHIRLPOOL df306ea2e92bc0cfd1aa85a025c703c50419d4c207233c0752e05e43c5a5a92d763701779f4bceb100eb3faa93063b700c3a4166a00d17988ca55650ffc7091e
 EBUILD rspec-core-2.99.1.ebuild 2537 SHA256 e7e5674297d5802e1ea360a585e76ed03f85dadf5a3c864e976d74d3ba0c13cc SHA512 b601813ed1d56534d9ee0a424afc5a79d9cfaa8cde32149b343f27bc00503b694ee0d063ac5b91fed49361abe918db12f12aeb6469bda21a5582aff458e43a74 WHIRLPOOL c06ea5b9185df18fe1e5222ec8a0212b112f8cc9acb445ab9bb730cdc16d6d66f4f345b43957694c929db45ea1bb100a47fede9d19d8b5c8f5cc5db892cf1859
-MISC ChangeLog 9693 SHA256 4af983f50c3af83dfdb92930cb4763c80bee64281e74251dbe8cc91d131ebcd5 SHA512 1c54483016e60b1f19f1649e23724705858274ebd3f163851a8e4a77f6f4dba33e9847b35da1aa879aa5ca15760978ab2ec2503ea9f63ee1301d5b401489ba4b WHIRLPOOL 631144973eeee7c6de717be1b2ad105a158e07f33fb68a50f50ab6141c2e6be21da2de98aeba3e3b59f3a4a9add4e56f1987e69a9697166c66be752ab67bcabb
+EBUILD rspec-core-2.99.2.ebuild 2536 SHA256 43fecdf3408db43893701609bcbe1dc8adbb8bd3cee41d4d9115fd5212d9982d SHA512 f5c6276cc84612f32a14b23afc3bf88dd6d0bc26a692de1859c69eebcb4285cf8a296e80cb5d0d30b8d9f58498f861c6dc718e6c814e2f5179c1cbf98257867c WHIRLPOOL f28744a2df69c3a02bbafdb485859c1754e4c9e6f57bc53f1e7937a248ef2e18c44f68e05226f4335823e3023b3cfcc5df662b17d69b70391158223b0b67136a
+MISC ChangeLog 9822 SHA256 7a8eae1aa28ac0b10169785d6f572958a46288802b829848a582f8b6b7aedbb2 SHA512 272cdbe1e74ca5b4b0e92fcf3878d527e6787c7188aaf361ad953e896b429524bc4a99eee82bdef7fa9ca3b4eee9c461e4384a73e74f9a791dd2017e887fed94 WHIRLPOOL 87bf4220a4a7d88e91b41328db8a995cd21109d357bce66222628bbce794e9a5e625947420e1a399c59348339f43f044127903a8dde7e502bb18a9992eb71886
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlP0NO8ACgkQiIP6VqMIqNfD0AD/b/Ku1NLuq7Te+FSLa2jYRQET
+bBR23aRgcBU5HnYOLWAA/2zx/lzBNSRfHGKgSNudcziylmToLD0+8OznO/O8qZQb
+=WqXI
+-----END PGP SIGNATURE-----
