@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=ruby_targets_ruby19? ( test? ( >=dev-ruby/nokogiri-1.5.2[ruby_targets_ruby19] dev-ruby/syntax[ruby_targets_ruby19] >=dev-ruby/zentest-4.6.2[ruby_targets_ruby19] >=dev-ruby/rspec-expectations-2.14.0:2[ruby_targets_ruby19] >=dev-ruby/rspec-mocks-2.99.0:2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/nokogiri-1.5.2[ruby_targets_ruby20] dev-ruby/syntax[ruby_targets_ruby20] >=dev-ruby/zentest-4.6.2[ruby_targets_ruby20] >=dev-ruby/rspec-expectations-2.14.0:2[ruby_targets_ruby20] >=dev-ruby/rspec-mocks-2.99.0:2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/nokogiri-1.5.2[ruby_targets_ruby21] dev-ruby/syntax[ruby_targets_ruby21] >=dev-ruby/zentest-4.6.2[ruby_targets_ruby21] >=dev-ruby/rspec-expectations-2.14.0:2[ruby_targets_ruby21] >=dev-ruby/rspec-mocks-2.99.0:2[ruby_targets_ruby21] ) ) ruby_targets_jruby? ( test? ( >=dev-ruby/nokogiri-1.5.2[ruby_targets_jruby] dev-ruby/syntax[ruby_targets_jruby] >=dev-ruby/zentest-4.6.2[ruby_targets_jruby] >=dev-ruby/rspec-expectations-2.14.0:2[ruby_targets_jruby] >=dev-ruby/rspec-mocks-2.99.0:2[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( doc? ( dev-ruby/yard[ruby_targets_ruby19] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/yard[ruby_targets_ruby21] ) ) ruby_targets_jruby? ( doc? ( dev-ruby/yard[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_jruby? ( doc? ( dev-ruby/rake[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_jruby? ( test? ( dev-ruby/rake[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) )
+DESCRIPTION=A Behaviour Driven Development (BDD) framework for Ruby
+EAPI=5
+HOMEPAGE=http://rspec.rubyforge.org/
+IUSE=elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_jruby doc test test
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_jruby )
+SLOT=2
+SRC_URI=https://github.com/rspec/rspec-core/archive/v2.99.2.tar.gz -> rspec-core-2.99.2-git.tgz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=d0ca5ceac4cf4f00853b93b660f5e279
