@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rspec-core
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-core/ChangeLog,v 1.75 2014/08/16 14:11:12 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-core/ChangeLog,v 1.76 2014/08/20 05:40:55 graaff Exp $
+
+*rspec-core-2.99.2 (20 Aug 2014)
+
+  20 Aug 2014; Hans de Graaff <graaff@gentoo.org> +rspec-core-2.99.2.ebuild:
+  Version bump.
 
   16 Aug 2014; Manuel Rüger <mrueg@gentoo.org> -rspec-core-2.13.1.ebuild,
   -rspec-core-2.99.0.ebuild:
