@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/peewee
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/peewee/ChangeLog,v 1.12 2014/07/13 15:00:17 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/peewee/ChangeLog,v 1.13 2014/08/20 06:20:21 idella4 Exp $
+
+*peewee-2.3.0 (20 Aug 2014)
+
+  20 Aug 2014; Ian Delaney <idella4@gentoo.org> +peewee-2.3.0.ebuild:
+  bump
 
 *peewee-2.2.5 (13 Jul 2014)
 
